styles for article page, adaptive for: doctors, prices, services, promotions

--- a/app/_scss/pages/contacts/contacts-general.scss
+++ b/app/_scss/pages/contacts/contacts-general.scss
@@ -48,7 +48,8 @@
 }
 
 
-.contacts-feed-block {
+.contacts-feed-block,
+.article-page-section_comments-form-container {
 
 	.form-group-material_textarea {
 		&:before,
