--- a/app/_scss/pages/article/article-general.scss
+++ b/app/_scss/pages/article/article-general.scss
@@ -60,8 +60,8 @@
 }
 
 .article-page-top__img {
-	width: auto;
-	height: 100%;
+	width: 1920px;
+	height: auto;
 }
 
 .article-page__description {
@@ -132,7 +132,6 @@
 .article-page__h3-title {
 	font-size: 24px;
 	line-height: 35px;
-	letter-spacing: 0.2;
 	@include font(bold);
 	margin-bottom: 15px;
 }
