--- a/app/css/main.css
+++ b/app/css/main.css
@@ -126,8 +126,8 @@ body {
 }
 
 .article-page-top__img {
-  width: auto;
-  height: 100%;
+  width: 1920px;
+  height: auto;
 }
 
 .article-page__description {
@@ -196,7 +196,6 @@ body {
 .article-page__h3-title {
   font-size: 24px;
   line-height: 35px;
-  letter-spacing: 0.2;
   font-family: 'BlissPro-Bold';
   margin-bottom: 15px;
 }
@@ -479,8 +478,218 @@ body {
 }
 
 /* xs+sm+md */
+@media screen and (max-width: 1199px) {
+  .article-page__title {
+    padding: 0;
+  }
+
+  .article-page__interesting-title:before, .article-page__interesting-title:after {
+    width: 275px;
+  }
+}
 /* xs+sm */
+@media screen and (max-width: 991px) {
+  .article-page__title {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .article-page-top__img {
+    width: 1440px;
+  }
+
+  .article-page__interesting-title:before, .article-page__interesting-title:after {
+    width: 170px;
+  }
+
+  .article-page__interesting-list {
+    padding: 0 128px;
+  }
+
+  .article-page__interesting-item {
+    margin-bottom: 30px;
+  }
+
+  .article-page__consult-list {
+    margin-left: -60px;
+    margin-right: -60px;
+  }
+
+  .article-page__btn-more, .article-page__btn-more:hover, .article-page__btn-more:focus {
+    margin-left: -60px;
+    margin-right: -60px;
+  }
+
+  .article-page-section_comments-form-container {
+    margin-left: -85px;
+    margin-right: -85px;
+  }
+}
 /* sm */
+@media screen and (max-width: 767px) {
+  .article-general-block {
+    margin-top: -160px;
+  }
+
+  .breadcrumbs-block.article-breadcrumbs {
+    padding-top: 70px;
+    margin-bottom: 60px;
+    position: relative;
+    z-index: 4;
+  }
+  .breadcrumbs-block.article-breadcrumbs .breadcrumbs-item {
+    font-size: 12px;
+    margin-right: 25px;
+  }
+  .breadcrumbs-block.article-breadcrumbs .breadcrumbs-item:before {
+    right: -15px;
+  }
+
+  .article-page__title {
+    font-size: 27px;
+    line-height: 37px;
+    margin-left: 0;
+    margin-right: 0;
+    position: relative;
+    margin-bottom: 30px;
+    height: 440px;
+    padding-top: 150px;
+    z-index: 3;
+  }
+
+  .article-page-top__img-container {
+    top: -160px;
+  }
+
+  .article-page-top__img {
+    width: 1460px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+
+  .article-page-top__img-container:before {
+    z-index: 2;
+  }
+
+  .article-page__description {
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 25px;
+  }
+
+  .article-page__h2-title {
+    font-size: 26px;
+  }
+
+  .article-page-block__item-title:before {
+    left: -13px;
+  }
+
+  .article-page-block__item-title {
+    margin-bottom: 0;
+  }
+
+  .article-page__pluses-item {
+    margin-bottom: 30px;
+  }
+  .article-page__pluses-item:last-child {
+    margin-bottom: 0;
+  }
+
+  .article-page__caniuse-item:before {
+    transform: none;
+    top: 12px;
+  }
+
+  .article-page__img-description {
+    font-size: 14px;
+    line-height: 21px;
+    margin-bottom: 30px;
+  }
+
+  .article-page-section_form {
+    margin-top: 0;
+  }
+
+  .article-page-section_form .contacts-feed-block__title {
+    font-size: 22px;
+  }
+
+  .article-page-section_form .feedback-pop__btn-submit,
+  .article-page-section_form .feedback-pop__btn-submit:hover,
+  .article-page-section_form .feedback-pop__btn-submit:focus {
+    margin-top: 25px;
+  }
+
+  .article-page__h3-title {
+    font-size: 22px;
+    line-height: normal;
+  }
+
+  .btn_default.aricle-page__submit,
+  .btn_default.aricle-page__submit:hover,
+  .btn_default.aricle-page__submit:focus {
+    margin-top: 30px;
+    max-width: 220px;
+  }
+
+  .article-page__interesting-title:before, .article-page__interesting-title:after {
+    display: none;
+  }
+
+  .article-page__interesting-list {
+    padding: 0;
+  }
+
+  .article-page__consult-description {
+    font-size: 14px;
+    line-height: 21px;
+  }
+
+  .article-page__consult-list {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .article-page__consult-item-img-container {
+    width: 40px;
+    height: 40px;
+    flex: 0 0 40px;
+    margin-right: 13px;
+  }
+
+  .article-page__consult-item-name {
+    height: 40px;
+    line-height: 40px;
+  }
+
+  .article-page__consult-item-description {
+    margin-left: -53px;
+  }
+
+  .consult-item_respond {
+    padding-left: 35px;
+  }
+
+  .article-page__btn-more, .article-page__btn-more:hover, .article-page__btn-more:focus {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .article-page-section_comments-form-container {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 20px 15px 40px 15px;
+  }
+
+  .comments-form__title {
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+}
 /****************
 ** сontacts-page*
 ****************/
